--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,10 @@ commands:
             sudo apt update -qq
             sudo apt install -y -qq moreutils
             mkdir ~/opt
-            tar xf prefetched/*/nodejs.tar.gz -C ~/opt --strip-components 1
+            node_version="$(curl -s https://nodejs.org/dist/index.json | jq -r '[.[]|select(.lts)][0].version')"
+            if [ "$(arch)" = "amd64" ]; then curl -fSL "https://nodejs.org/dist/$node_version/node-$node_version-linux-x64.tar.gz" -o nodejs.tar.gz; fi
+            if [ "$(arch)" = "arm64" ]; then curl -fSL "https://nodejs.org/dist/$node_version/node-$node_version-linux-arm64.tar.gz" -o nodejs.tar.gz; fi
+            tar xf nodejs.tar.gz -C ~/opt --strip-components 1
             PATH=${PATH}:~/opt/bin npm install --global --silent --no-progress tap-xunit bats
             echo "export PATH=${PATH}:~/opt/bin" >> ${BASH_ENV}
       - run:
